# phantomguard

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  appointments.db  demo_agent.py  docker-compose.yml  norn-autoload.pth  pyproject.toml  quantum_computing_research_report_2026.md  setup.py  test_runner.py
.claude/: launch.json
.github/workflows/: publish-docker.yml  publish-pypi.yml
data/: history.jsonl
docs/: 02_BUG_REPORT.md
norn/: __init__.py  api.py  proxy.py  shared.py
norn-dashboard/: App.tsx  README.md  index.css  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
norn-dashboard/components/: AddAgent.tsx  AgentDetail.tsx  AuditLogView.tsx  BrowserAuditView.tsx  ConfigView.tsx  Dashboard.tsx  SessionDetail.tsx  SessionList.tsx  Sidebar.tsx  StatusBadge.tsx  SwarmView.tsx
norn-dashboard/components/panels/: AIAnalysisPanel.tsx  ExecutionStepsPanel.tsx  TestResultsPanel.tsx
norn-dashboard/services/: api.ts
norn/agents/: __init__.py  quality_evaluator.py  shadow_browser.py
norn/core/: audit_logger.py  interceptor.py  step_analyzer.py
norn/execution/: discovery.py  runner.py  task_gen.py
norn/import_utils/: file_detection.py  pyproject.py
norn/models/: __init__.py  schemas.py
norn/routers/: __init__.py  agents_hook.py  agents_import.py  agents_registry.py  agents_run.py  audit.py  config.py  sessions.py  stats.py  swarms.py  websocket.py
norn/utils/: __init__.py  agent_discovery.py  agent_runner.py  aws_config.py
norn_logs/: agents_registry.json  config.json
norn_logs/sessions/: 1075eb19-f30.json  71aef138-8a4.json  886dbfd0-f73.json  8a29c70a-d2a.json  95d60e22-79e.json  96e7011f-c27.json  986a595f-468.json  9b14a1fa-7a0.json  git-20260222163120-agent-20260222163136.json  git-20260223151232-agent-20260223151313.json  git-20260223152206-agent-20260223152234.json  git-20260223152802-agent-20260223152828.json  git-20260223154200-agent-20260223154247.json  git-20260223160024-agent-20260223160057.json  git-20260223161748-agent-20260223161811.json  git-20260223171735-main-20260223171745.json  git-20260223175324-calendar-assistant-20260223175444.json  git-20260223180850-main-20260223180907.json  git-20260223180850-main-20260223211720.json  hook-auth_error_detection.json  hook-demo_agent.json  hook-duplicate_test_agent.json  hook-normal_file_task.json  hook-ssl_bypass_detection.json  zip-20260222161704-20260222161734.json  zip-20260222162253-20260222162308.json
norn_logs/workspace/git-20260228230912-agent-20260228230926/journal/: 2026-02-28.md
notifications/: notification_history.jsonl
phantomguard/: __init__.py  api.py  proxy.py
phantomguard-dashboard/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json
phantomguard-dashboard/components/: AddAgent.tsx  AuditLogView.tsx  BrowserAuditView.tsx  ConfigView.tsx  Dashboard.tsx  SessionDetail.tsx  Sidebar.tsx
phantomguard-dashboard/components/panels/: AIAnalysisPanel.tsx
phantomguard-dashboard/services/: api.ts
phantomguard/agents/: __init__.py  quality_evaluator.py  shadow_browser.py
phantomguard/core/: audit_logger.py  interceptor.py  step_analyzer.py
phantomguard/models/: __init__.py  schemas.py
phantomguard/utils/: __init__.py  agent_discovery.py  agent_runner.py  aws_config.py
session/fibonacci_project/: README.md  fibonacci_basic.py  fibonacci_enhanced.py
sessions/session_research-2026-02-23-15/: session.json
sessions/session_research-2026-02-23-15/agents/agent_default/: agent.json
sessions/session_research-2026-02-23-15/agents/agent_default/messages/: message_0.json  message_1.json  message_2.json  message_3.json  message_4.json  message_5.json  message_6.json  message_7.json
sessions/session_research-2026-02-23-16/: session.json
sessions/session_research-2026-02-23-16/agents/agent_default/: agent.json
sessions/session_research-2026-02-23-16/agents/agent_default/messages/: message_0.json  message_1.json  message_10.json  message_11.json  message_12.json  message_13.json  message_14.json  message_15.json  message_16.json  message_17.json  message_18.json  message_19.json  message_2.json  message_3.json  message_4.json  message_5.json  message_6.json  message_7.json  message_8.json  message_9.json
tests/agents/: demo_agent.py  normal_agent.py  swarm_agents.py  swarm_pipeline.py  test_agent_1.py  test_agent_2.py  test_agent_3.py
tests/agents/zip_agents/quality_agent/: agent.py
tests/agents/zip_agents/security_agent/: agent.py
